--- a/src/main/java/com/poo1/ui/listagens/BuscaFuncionarioPorNome.form
+++ b/src/main/java/com/poo1/ui/listagens/BuscaFuncionarioPorNome.form
@@ -34,7 +34,7 @@
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jButton1" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="0" pref="230" max="32767" attributes="0"/>
+                      <EmptySpace min="0" pref="237" max="32767" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
@@ -63,7 +63,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
-        <Property name="text" type="java.lang.String" value="C&#xf3;digo do funcion&#xe1;rio para buscar"/>
+        <Property name="text" type="java.lang.String" value="Nome do funcion&#xe1;rio para buscar"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="jButton1">
